<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StudyFragment">

        <TextView
            android:id="@+id/tvSetStudyAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_horizontal_spacing"
            android:text="@string/set_study_alarm"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TimePicker
            android:id="@+id/tpSetStudyAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_horizontal_spacing"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toStartOf="@+id/btnClearStudyAlarm"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSetStudyAlarm"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSetStudyAlarm"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set"
            app:layout_constraintBottom_toTopOf="@+id/btnClearStudyAlarm"
            app:layout_constraintEnd_toEndOf="@+id/btnClearStudyAlarm"
            app:layout_constraintStart_toStartOf="@+id/btnClearStudyAlarm"
            app:layout_constraintTop_toTopOf="@+id/tpSetStudyAlarm"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btnClearStudyAlarm"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_horizontal_spacing"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="@+id/tpSetStudyAlarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/btnSetStudyAlarm" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_horizontal_spacing"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/btnStopAlarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tpSetStudyAlarm"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/btnStopAlarm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_alarm"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>