<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".RestFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSetRestAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/set_rest_alarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constrainedWidth="true" />

            <TimePicker
                android:id="@+id/tpSetRestAlarm"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:timePickerMode="spinner"
                app:layout_constraintDimensionRatio="5:3"
                app:layout_constraintEnd_toStartOf="@+id/btnSetRestAlarm"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSetRestAlarm"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnSetRestAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minWidth="0dp"
                android:text="@string/set"
                app:layout_constraintBottom_toBottomOf="@+id/tpSetRestAlarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="@+id/tpSetRestAlarm" />


            <TextView
                android:id="@+id/tvSetRestWindowAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/set_rest_windows_alarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tpSetRestAlarm"
                app:layout_constrainedWidth="true" />

            <TimePicker
                android:id="@+id/tpSetRestWindowAlarm"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:timePickerMode="spinner"
                app:layout_constraintDimensionRatio="5:3"
                app:layout_constraintEnd_toStartOf="@+id/btnSetRestWindowAlarm"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSetRestWindowAlarm"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnSetRestWindowAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minWidth="0dp"
                android:text="@string/set"
                app:layout_constraintBottom_toBottomOf="@+id/tpSetRestWindowAlarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="@+id/tpSetRestWindowAlarm" />

            <TextView
                android:id="@+id/tvSetRepeatingRestAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/set_repeating_rest_alarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tpSetRestWindowAlarm"
                app:layout_constrainedWidth="true" />

            <TimePicker
                android:id="@+id/tpSetRepeatingRestAlarm"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:timePickerMode="spinner"
                app:layout_constraintDimensionRatio="5:3"
                app:layout_constraintEnd_toStartOf="@+id/btnSetRepeatingRestAlarm"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSetRepeatingRestAlarm"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnSetRepeatingRestAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minWidth="0dp"
                android:text="@string/set"
                app:layout_constraintBottom_toBottomOf="@+id/tpSetRepeatingRestAlarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="@+id/tpSetRepeatingRestAlarm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
